feat: html structure is finished, welcome-page styled, started to style another pages

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header>
-		<nav id="navbar">
-			<ul>
-				<li class="nav-link"><a><a href="#welcome-section">About</a></li>
-				<li class="nav-link"><h3 id="#projects">Work</h3></li>
-				<li class="nav-link"><h3 id="#contact">Contact</h3></li>
-			</ul>
-		</nav>
-	</header>
+	<nav id="navbar">
+		<ul id="nav-list">
+			<li><a class="nav-link" href="#welcome-section">About</a></li>
+			<li><a class="nav-link" href="#projects">Work</a></li>
+			<li><a class="nav-link" href="#contact">Contact</a></li>
+		</ul>
+	</nav>
 	<main>
 		<section id="welcome-section">
 			<h1>Hey, I am Raphael</h1>
@@ -28,7 +26,6 @@
 		</section>
 		<section id="projects">
 			<h2>There are some of my projects</h2>
-			<div id="underline"></div>
 			<div id="projects-list">
 				<div class="project">
 					<h3 id="project-title"></h3>
@@ -48,10 +45,10 @@
 			<h1>Let's work together...</h1>
 			<p>How do you take your coffee?</p>
 			<div id="contact-links">
-				<a class="fab fa-telegram" href=""></a>
-				<a class="fab fa-github" href=""></a>
-				<a class="fa fa-at" href=""></a>
-				<a class="fa fa-mobile-alt" href=""></a>
+				<a class="fab fa-telegram" href=""> Telegram</a>
+				<a id="profile-link" class="fab fa-github" href="https://github.com/cvine21"> GitHub</a>
+				<a class="fa fa-at" href=""> Send a mail</a>
+				<a class="fa fa-mobile-alt" href=""> Call me</a>
 			</div>
 		</section>
 	</main>
