--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
 		</section>
 		<section id="projects">
 			<h2>There are some of my projects</h2>
-			<div id="projects-list">
-				<div class="project">
-					<h3 id="project-title"></h3>
-				</div>
-				<div class="project">
-					<h3 id="project-title"></h3>
-				</div>
-				<div class="project">
-					<h3 id="project-title"></h3>
-				</div>
-				<div class="project">
-					<h3 id="project-title"></h3>
-				</div>
+			<div id="projects-grid">
+				<a class="project" href="" target="_blank">
+					<img id="project-img" src="./img/product_landing_page.png" alt="product landing page">
+					<p id="project-title">Product Landing Page</p>
+				</a>
+				<a class="project" href="" target="_blank">
+					<img id="project-img" src="./img/tech_doc_page.png" alt="technical documentation page">
+					<p id="project-title">Technical Documentation Page</p>
+				</a>
+				<a class="project" href="" target="_blank">
+					<img id="project-img" src="./img/tribute_page.png" alt="tribute page">
+					<p id="project-title">Tribute Page</p>
+				</a>
+				<a class="project" href="" target="_blank">
+					<img id="project-img" src="./img/survey_form.png" alt="survey form">
+					<p id="project-title">Survey Form</p>
+				</a>
 			</div>
 		</section>
 		<section id="contact">
