--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<nav id="navbar">
 		<ul id="nav-list">
 			<li><a class="nav-link" href="#welcome-section">About</a></li>
-			<li><a class="nav-link" href="#projects">Work</a></li>
-			<li><a class="nav-link" href="#contact">Contact</a></li>
+			<li><a class="nav-link" href="#projects-section">Work</a></li>
+			<li><a class="nav-link" href="#contact-section">Contact</a></li>
 		</ul>
 	</nav>
 	<main>
@@ -25,34 +25,54 @@
 			<p>a web developer</p>
 		</section>
 		<section id="projects">
-			<h2>There are some of my projects</h2>
+			<h2 id="projects-header">These are some of my projects</h2>
 			<div id="projects-grid">
-				<a class="project" href="" target="_blank">
+				<a class="project-link" href="https://github.com/cvine21/product_landing_page" target="_blank">
 					<img id="project-img" src="./img/product_landing_page.png" alt="product landing page">
-					<p id="project-title">Product Landing Page</p>
+					<p class="project-tile">
+						<span class="brackets"><</span>
+						Product Landing Page
+						<span class="brackets">/></span>
+					</p>
 				</a>
-				<a class="project" href="" target="_blank">
+				<a class="project-link" href="https://github.com/cvine21/techical_documentation_page" target="_blank">
 					<img id="project-img" src="./img/tech_doc_page.png" alt="technical documentation page">
-					<p id="project-title">Technical Documentation Page</p>
+					<p class="project-tile">
+						<span class="brackets"><</span>
+						Technical Documentation Page
+						<span class="brackets">/></span>
+					</p>
 				</a>
-				<a class="project" href="" target="_blank">
+				<a class="project-link" href="https://github.com/cvine21/tribute_page" target="_blank">
 					<img id="project-img" src="./img/tribute_page.png" alt="tribute page">
-					<p id="project-title">Tribute Page</p>
+					<p class="project-tile">
+						<span class="brackets"><</span>
+						Tribute Page
+						<span class="brackets">/></span>
+					</p>
 				</a>
-				<a class="project" href="" target="_blank">
+				<a class="project-link" href="https://github.com/cvine21/survey_form" target="_blank">
 					<img id="project-img" src="./img/survey_form.png" alt="survey form">
-					<p id="project-title">Survey Form</p>
+					<p class="project-tile">
+						<span class="brackets"><</span>
+						Survey Form
+						<span class="brackets">/></span>
+					</p>
 				</a>
 			</div>
+			<a class="btn-show-all" href="https://github.com/cvine21?tab=repositories" target="_blank">
+				Show all
+				<i class="fas fa-chevron-right"></i>
+			</a>
 		</section>
-		<section id="contact">
-			<h1>Let's work together...</h1>
+		<section id="contact-section">
+			<h2 id="contact-header">Let's work together...</h2>
 			<p>How do you take your coffee?</p>
-			<div id="contact-links">
-				<a class="fab fa-telegram" href=""> Telegram</a>
-				<a id="profile-link" class="fab fa-github" href="https://github.com/cvine21"> GitHub</a>
-				<a class="fa fa-at" href=""> Send a mail</a>
-				<a class="fa fa-mobile-alt" href=""> Call me</a>
+			<div id="contacts-list">
+				<a class="contact-link fab fa-telegram" href="https://t.me/cvine21" target="_blank"> Telegram</a>
+				<a id="profile-link" class="contact-link fab fa-github" href="https://github.com/cvine21" target="_blank"> GitHub</a>
+				<a class="contact-link fa fa-at" href="mailto:rafarakh@gmail.com" target="_blank"> Send a mail</a>
+				<a class="contact-link fa fa-mobile-alt" href="tel:555-555-5555"> Call me</a>
 			</div>
 		</section>
 	</main>
