--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav id="navbar">
 		<ul id="nav-list">
 			<li><a class="nav-link" href="#welcome-section">About</a></li>
-			<li><a class="nav-link" href="#projects-section">Work</a></li>
+			<li><a class="nav-link" href="#projects">Work</a></li>
 			<li><a class="nav-link" href="#contact-section">Contact</a></li>
 		</ul>
 	</nav>
@@ -28,7 +28,7 @@
 			<h2 id="projects-header">These are some of my projects</h2>
 			<div id="projects-grid">
 				<a class="project-link" href="https://github.com/cvine21/product_landing_page" target="_blank">
-					<img id="project-img" src="./img/product_landing_page.png" alt="product landing page">
+					<img class="project-img" src="./img/product_landing_page.png" alt="product landing page">
 					<p class="project-tile">
 						<span class="brackets"><</span>
 						Product Landing Page
@@ -36,7 +36,7 @@
 					</p>
 				</a>
 				<a class="project-link" href="https://github.com/cvine21/techical_documentation_page" target="_blank">
-					<img id="project-img" src="./img/tech_doc_page.png" alt="technical documentation page">
+					<img class="project-img" src="./img/tech_doc_page.png" alt="technical documentation page">
 					<p class="project-tile">
 						<span class="brackets"><</span>
 						Technical Documentation Page
@@ -44,7 +44,7 @@
 					</p>
 				</a>
 				<a class="project-link" href="https://github.com/cvine21/tribute_page" target="_blank">
-					<img id="project-img" src="./img/tribute_page.png" alt="tribute page">
+					<img class="project-img" src="./img/tribute_page.png" alt="tribute page">
 					<p class="project-tile">
 						<span class="brackets"><</span>
 						Tribute Page
@@ -52,7 +52,7 @@
 					</p>
 				</a>
 				<a class="project-link" href="https://github.com/cvine21/survey_form" target="_blank">
-					<img id="project-img" src="./img/survey_form.png" alt="survey form">
+					<img class="project-img" src="./img/survey_form.png" alt="survey form">
 					<p class="project-tile">
 						<span class="brackets"><</span>
 						Survey Form
